[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Chat.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=4]
[ext_resource path="res://Assets/Images/player.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Player" type="Area2D" groups=[
"players",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="NicknameLabel" type="Label" parent="."]
margin_left = -40.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 34.0
text = "nickname"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Chat" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Chat"]
self_modulate = Color( 1, 1, 1, 0.882353 )
margin_left = -576.0
margin_top = 128.0
margin_right = -320.0
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Chat/Panel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Chat/Panel"]
margin_left = 8.0
margin_top = 160.0
margin_right = 248.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Inventory"]
self_modulate = Color( 1, 1, 1, 0.882353 )
margin_left = -512.0
margin_top = -256.0
margin_right = 512.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemListLabel" type="Label" parent="Inventory/Panel"]
margin_left = 184.0
margin_top = 32.0
margin_right = 245.0
margin_bottom = 46.0
text = "Inventory"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Inventory/Panel"]
margin_left = 64.0
margin_top = 64.0
margin_right = 400.0
margin_bottom = 448.0
focus_mode = 0
size_flags_horizontal = 0
custom_styles/bg = SubResource( 2 )
allow_reselect = true
max_columns = 6
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2( 48, 48 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList2Label" type="Label" parent="Inventory/Panel"]
margin_left = 784.0
margin_top = 32.0
margin_right = 824.0
margin_bottom = 46.0
text = "Shop"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList2" type="ItemList" parent="Inventory/Panel"]
margin_left = 648.0
margin_top = 64.0
margin_right = 984.0
margin_bottom = 448.0
focus_mode = 0
size_flags_horizontal = 0
custom_styles/bg = SubResource( 2 )
allow_reselect = true
max_columns = 6
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2( 48, 48 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemNameLabel" type="Label" parent="Inventory/Panel"]
margin_left = 448.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 80.0
text = "ItemNameLabel"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSprite" type="Sprite" parent="Inventory/Panel"]
position = Vector2( 512, 128 )

[node name="ItemCountLabel" type="Label" parent="Inventory/Panel"]
margin_left = 480.0
margin_top = 176.0
margin_right = 544.0
margin_bottom = 190.0
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDescriptionRichTextLabel" type="RichTextLabel" parent="Inventory/Panel"]
margin_left = 384.0
margin_top = 192.0
margin_right = 640.0
margin_bottom = 224.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemPriceLabel" type="Label" parent="Inventory/Panel"]
margin_left = 480.0
margin_top = 304.0
margin_right = 544.0
margin_bottom = 318.0
text = "Price: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Inventory/Panel"]
margin_left = 480.0
margin_top = 328.0
margin_right = 544.0
margin_bottom = 352.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Inventory/Panel"]
margin_left = 384.0
margin_top = 368.0
margin_right = 640.0
margin_bottom = 408.0
min_value = 1.0
value = 1.0
tick_count = 2
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Inventory/Panel"]
margin_left = 448.0
margin_top = 424.0
margin_right = 576.0
margin_bottom = 488.0
text = "Drop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.5 )
margin_left = 512.0
margin_top = -320.0
margin_right = 585.0
margin_bottom = -300.0
text = "Inventory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="."]
margin_left = -20.0
margin_top = -310.0
margin_right = 20.0
margin_bottom = -296.0
grow_horizontal = 2
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoTimer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Player_area_exited"]
[connection signal="focus_entered" from="Chat/Panel/LineEdit" to="Chat" method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="Chat/Panel/LineEdit" to="Chat" method="_on_LineEdit_focus_exited"]
[connection signal="text_entered" from="Chat/Panel/LineEdit" to="Chat" method="_on_LineEdit_text_entered"]
[connection signal="item_selected" from="Inventory/Panel/ItemList" to="Inventory" method="_on_ItemList_item_selected"]
[connection signal="item_selected" from="Inventory/Panel/ItemList2" to="Inventory" method="_on_ItemList2_item_selected"]
[connection signal="value_changed" from="Inventory/Panel/HSlider" to="Inventory" method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Inventory/Panel/Button" to="Inventory" method="_on_Button_pressed"]
[connection signal="mouse_entered" from="InventoryButton" to="." method="_on_InventoryButton_mouse_entered"]
[connection signal="mouse_exited" from="InventoryButton" to="." method="_on_InventoryButton_mouse_exited"]
[connection signal="pressed" from="InventoryButton" to="." method="_on_InventoryButton_pressed"]
